@@ -1,5 +1,8 @@
 todoyu search changelog
 
+search 1.1.3 - not released yet
+	* Bugfix: Fixed empty exports caused by to long get-parameter (conditions)
+
 search 1.1.2 - 2011-11-17
 	* Bugfix: External filter methods were not called correct (not found)
 	* Added: Newly added filter widgets are given focus
